o Corrected tape format implementation to correctly support non block-aligned extension records. o Corrected some reported positions.
git-svn-id: http://svn.jdtaus.org/svnroot/jdtaus/jdtaus-banking/branches/jdtaus-banking-1.x@6872 d3f52c91-230f-0410-802c-e3ec080d4bae